<resources>
    <string name="app_name">HRS(House Rental System)</string>
    <string name="main_title">HRS (House Rental System)</string>
    <string name="sub_title">Find Your Dream House</string>
    <string name="Email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="Logo_Description">Logo of The Project</string>
    <string name="already_have_an_account_log_in">Already Have an Account? Log In</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="info">Please Fill full Information</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="selling">Selling</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">HI,</string>
    <string name="find">Find</string>
    <string name="best_place">best place</string>
    <string name="nearby">nearby</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula neque luctus, malesuada magna vitae, efficitur ligula. Cras mauris metus, iaculis vel ultricies eu, suscipit id est. Fusce convallis eu ligula nec dapibus. Duis fringilla fringilla euismod. Ut id volutpat arcu. Maecenas eleifend libero a nisi venenatis, ac lobortis odio eleifend. Duis hendrerit eget justo quis lobortis. Sed eu mattis orci, ultrices dignissim libero.</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_ads">My Ads</string>

</resources>