<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_selling"
        android:checked="false"
        android:icon="@drawable/ic_selling"
        android:title="@string/selling"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:checked="false"
        android:icon="@drawable/ic_favorite"
        android:title="@string/my_ads"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:checked="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>