<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:paddingBottom="50dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_weight="6"
                        android:contentDescription="@string/Logo_Description"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/tv_main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:fontFamily="@font/sans_font"
                        android:text="@string/main_title"
                        android:textSize="25sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2"
                        android:fontFamily="@font/sans_font"
                        android:text="@string/sub_title"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_main_title" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/profile_photo"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_name_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:boxStrokeWidth="0dp"
                app:startIconTint="@color/blue_700"
                android:layout_margin="15dp"
                app:startIconDrawable="@drawable/ic_profile"
                android:hint="@string/user_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/et_user_name"
                    android:background="@drawable/et_custom_1"
                    android:fontFamily="@font/sans_font"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_password_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:boxStrokeWidth="0dp"
                app:startIconTint="@color/blue_700"
                android:layout_margin="15dp"
                app:startIconDrawable="@drawable/ic_password"
                android:hint="@string/password_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_user_email_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/et_user_password"
                    android:background="@drawable/et_custom_1"
                    android:fontFamily="@font/sans_font"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_confirm_password_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:boxStrokeWidth="0dp"
                app:startIconTint="@color/blue_700"
                android:layout_margin="15dp"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_alignParentTop="true"
                android:hint="@string/hint_confirm_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_user_password_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/et_user_confirm_password"
                    android:background="@drawable/et_custom_1"
                    android:fontFamily="@font/sans_font"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_email_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:boxStrokeWidth="0dp"
                app:startIconTint="@color/blue_700"
                android:layout_margin="15dp"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_alignParentTop="true"
                android:hint="@string/Email_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_user_name_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/et_user_email"
                    android:background="@drawable/et_custom_1"
                    android:fontFamily="@font/sans_font"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/sans_font"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_user_confirm_password_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

                <Button
                    android:id="@+id/tv_log_in_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/sans_font"
                    android:gravity="end"
                    android:text="@string/already_have_an_account_log_in"
                    android:textColor="@color/blue_700"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>