<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_title"
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="20dp"
                android:background="@color/white"
                android:paddingBottom="50dp"
                app:cardElevation="5dp"            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="6"
                        android:contentDescription="@string/Logo_Description"/>

                    <TextView
                        android:id="@+id/tv_main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_title"
                        android:fontFamily="@font/sans_font"
                        android:textSize="25sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold|italic"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/tv_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:fontFamily="@font/sans_font"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_user_email_main"
    app:layout_constraintTop_toBottomOf="@id/cv_title"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_margin="20dp"
    android:hint="@string/Email_hint"
    app:boxCornerRadiusTopEnd="12dp"
    app:boxCornerRadiusBottomEnd="12dp"
    app:boxCornerRadiusBottomStart="12dp"
    app:boxCornerRadiusTopStart="12dp"
    >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/et_user_email"
                android:background="#fff"
                />

            </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_send_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/send_reset_email"
                            app:layout_constraintTop_toBottomOf="@id/et_user_email_main"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/sans_font"
                            android:textStyle="bold" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            app:layout_constraintTop_toBottomOf="@id/btn_send_email"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/sans_font"
                            android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/log_in_progressbar"
                            style="?android:progressBarStyleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:visibility="gone" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>